                               Set::Relation
---------------------------------------------------------------------------

2009-02-05   Darren Duncan <perl@DarrenDuncan.net>

    * Set::Relation version 0.4.0 for Perl 5 is released on CPAN as
    Set-Relation-0.4.0.tar.gz.

    * Updated external dependencies: Moose/etc to version 0.68.

    * As of this release, Set::Relation for Perl 5 uses the
    namespace::clean pragma for good hygiene; this distribution has now
    gained an external dependency on the Perl 5 module 'namespace::clean',
    which is not bundled with any version of Perl and will need to be
    installed from CPAN; namespace::clean also has a few not-bundled
    dependencies of its own.

    * (Relation.pm)  Added "use namespace::clean" statements inside the
    package declaration following any other "use" statements, so their
    exports into our package doesn't also become part of our own public API
    as a side-effect; the only exception is the "meta" method that Moose
    adds, which is kept.

    * (Relation.pm)  Added new documentation sub-section under
    "DESCRIPTION" named "Appropriate Uses For Set::Relation", which should
    hopefully answer some FAQs, such as why does the module exist, and
    pointing out some strengths and weaknesses.

    * (Relation.pm)  Corrected a forgetful oversight in the module
    documentation concerning Set::Relation's "has_frozen_identity" object
    attribute; this attribute had an auto-generated read-only public
    accessor method plus is automatically initialized from a same-named
    constructor method; added "has_frozen_identity" to the accessor method
    list, and updated the "new" constructor submethod signature.

    * (Relation.pm, Set_Relation_50_Synopsis.t,
    Set_Relation_51_Database_in_Depth_Example.t)  Updated the "new"
    constructor submethod so that it now accepts a single positional
    argument as an invocation option, where before it just accepted named