@@ -1,6 +1,18 @@
                                Set::Relation
 ---------------------------------------------------------------------------
 
+2009-02-06   Darren Duncan <perl@DarrenDuncan.net>
+
+    * Set::Relation version 0.5.0 for Perl 5 is released on CPAN as
+    Set-Relation-0.5.0.tar.gz.
+
+    * (Relation.pm)  Added these 8 object methods (still 14 to go):
+    "restriction_and_cmpl", "semijoin_and_diff", "substitution",
+    "static_substitution", "subst_in_restr", "static_subst_in_restr",
+    "subst_in_semijoin", "static_subst_in_semijoin".
+
+    * (Relation.pm)  Other minor updates and fixes.
+
 2009-02-05   Darren Duncan <perl@DarrenDuncan.net>
 
     * Set::Relation version 0.4.0 for Perl 5 is released on CPAN as
